--- a/index.html
+++ b/index.html
@@ -221,146 +221,8 @@
         <div class="page page-right">
           <div class="page-inner">
             <section>
-              <p class="highlightbar">Tina-Michelle is a <a href="http://www.acefitness.org/acefit/trainer_profile.aspx?acecp=dyy7328" target="_blank">Certified Personal Trainer</a>, specializing in Functional Movement and injury rehabilitation.</p>
-            </section>
-            <section>
-              <div class="credentials">
-                <!--<img src="img/profile.png"/>-->
-                <li>Certified Personal Trainer (CPT)</li>
-                <li class="subtitle">American Council on Exercise</li>
-                <li>Certified Functional Movement Specialist (FMSC) - Levels 1 &amp; 2</li>
-                <li class="subtitle">Functional Movement Systems</li>
-                <li>CPR/AED Certification</li>
-                <li class="subtitle">Infant, Child, &amp; Adult</li>
-                <li>First Aid Certification</li>
-                <li class="subtitle">Including SIDS/SBS</li>
-                <li>B.A. Psychology</li>
-                <li class="subtitle">Concentration in Human Development</li>
-                <li>Gerontology Certificate</li>
-                <li>A.A. Business Technology</li>
-                <li>Paralegal Certificate</li>
-              </div>
-              <h2>About</h2>
-              <p>I am a Certified Personal Trainer, specializing in Functional Movement and injury recovery.</p>
-              <p>
-                As a former dancer and all-around athlete, I have a keen understanding of the human body. I am also personally
-                familiar with the road to recovery and the impact that has on one’s life: After a car crash left me bedridden
-                for three years, I sustained head to toe injuries ten years later when I was hit by a truck while out running.
-              </p>
-              <p>
-                From rehabilitation to athletic development, I integrate Functional Movement Systems to implement exercise
-                with greater accuracy, specificity, and individuality. By identifying asymmetries and limitations, I am able
-                to clearly document measurements and communicate progress and treatment with physicians. By addressing
-                dangerous movement patterns, the focus is kept on performance enhancement, rather than sideline decoration.
-              </p>
-              <p>
-                I hold a degree in Psychology with a concentration in Human Development. This, along with a certificate in
-                Gerontology, has made me acutely aware of the biopsychosocial effects and issues one faces throughout the
-                life span. My studies in the Human Brain and Nutrition round out the thorough approach I take with each
-                unique program design.
-              </p>
-              <p>
-                Ultimately, it is my personal, educational, and professional background that enables me to meet my three main
-                objectives in my work: To help others overcome adversity, increase their well-being, and realize their full
-                potential.
-              </p>
-            </section>
-<!--
-            <section>
-              <h2>Philosophy | Approach</h2>
-              <p>
-                Personal growth and development occur throughout the entire lifespan; how much of that is explored is uniquely determined.
-              </p>
-              <p>
-                To facilitate continued progression and achievement, Tina-Michelle collaborates with each individual in an effort to define and redefine goals. Customized programs are meticulously
-                designed – specific to personal needs. They may include corrective exercise, cognitive fitness, and other relevant tools required for success.
-              </p>
-            </section>
-            <section class="unique">
-              <h2>Benefits</h2>
-              <li>
-                Tina-Michelle’s diverse personal, educational, and professional experiences are insightful when making attainable lifestyle suggestions.
-              </li>
-              <li>
-                Her formal studies range from nutrition to the human brain. This helps provide comprehensive understanding in areas that perplex many.
-              </li>
-              <li>
-                Her own experience with rehabilitation helps to understand the steps to take in overcoming setbacks.
-              </li>
               <br/><br/>
-            </section>
--->
-<!--
-            <section>
-              <h2>Who Trains With Tina-Michelle?</h2>
-              <p>
-                Tina-Michelle works with a wide range of people. Many seek help in areas such as chronic pain management, post-orthopedic rehabilitation, special conditions, sports
-                conditioning, and dance instruction.
-              </p>
-              <p>
-                Injured athletes, older adults who wish to maintain their independence, entrepreneurs seeking balance, aspiring performers, anyone with a health goal... they
-                all share a sense of determination. They are quality-seekers who value their time and want to maximize their potential.  They are the ones writing the rest of <i>their</i> life story.
-              </p>
-            </section>
--->
-            <section>
-              <h2>Rates and Availability</h2>
-              <i>Currently <a href="http://tina-michelle.com/availability" target="_blank" style="color:orange;">available</a> <u style="font-weight: bold;">online only</u> via Skype or Google Hangouts</i>
-              <h4>Online Personal Training Packages:</h4>
-              <ul>
-                <li>1 one hour session: $70</li>
-                <li>4 one hour long sessions: $60 per session</li>
-                <li>8 one hour long sessions: $50 per session</li>
-                <li>12 one hour long sessions: $40 per session</li>
-              </ul>
-              <ul>
-                <i>Express Sessions:</i>
-                <li>$40 per 30 minutes</li>
-                <li>$30 per 20 minutes</li>
-              </ul>
-              <h4>On-Site Personal Training Packages (One-On-One):</h4>
-              <ul>
-                <li>1 one hour session: $125</li>
-                <li>4 one hour long sessions: $115 per session</li>
-                <li>8 one hour long sessions: $105 per session</li>
-                <li>12 one hour long sessions: $95 per session</li>
-              </ul>
-              <h4>On-Site Semi-Private Group Training Packages (2-5 People):</h4>
-              <ul>
-                <li>1 one hour session: $85 per person</li>
-                <li>4 one hour long sessions: $75 per person, per session</li>
-                <li>8 one hour long sessions: $65 per person, per session</li>
-                <li>12 one hour long sessions: $55 per person, per session</li>
-              </ul>
-              <h4>Please contact info@tina-michelle.com for the following:</h4>
-              <ul>
-                <li>Presentations</li>
-                <li>Workshops</li>
-                <li>Special Events</li>
-                <li>Wellness Programs (e.g. Workplace, After-School, Retirement and Assisted Living)</li>
-              </ul>
-            </section>
-            <section>
-              <h2>Contact</h2>
-              <p>info@tina-michelle.com</p>
-            </section>
-<!--
-            <section>
-              <h2>Ventures</h2>
-              <p>
-                Tina-Michelle is a private trainer, who taught her dance-fitness classes publicly.  When demand quickly grew, there was a great deal of crossover
-                between her public classes and private sessions.  To accommodate enthusiasts, she evolved Move Your Axis&trade; into the well-rounded program it is today,
-                offering an array of choices for
-                healthy lifestyles.
-              </p>
-              <p>
-                Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
-              </p>
-            </section>
--->
-            <section>
-              <h2>Writings</h2>
-              <p>Tina-Michelle's articles can be found on <a href="https://medium.com/@RhythmNMovement" target="_blank">https://medium.com/@RhythmNMovement</a></p>
+              Tina-Michelle.com&trade; is on hold until further notice. For more information, please contact info@tina-michelle.com.
             </section>
           </div><!-- /page-inner -->
         </div><!-- /page-right -->
