--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="side side-right">
             <header>
               <nav>
-                <a href="https://medium.com/@rhythmnmovement" target="_blank" class="hint--bounce hint--rounded hint--left" data-hint="Tina-Michelle writes!"><img src="http://static.coreybutler.com/images/icons/medium.png"></a><br/>
+                <!--<a href="https://medium.com/@rhythmnmovement" target="_blank" class="hint--bounce hint--rounded hint--left" data-hint="Tina-Michelle writes!"><img src="http://static.coreybutler.com/images/icons/medium.png"></a><br/>-->
                 <div class="hint--bounce hint--rounded hint--left" data-hint="Follow Tina-Michelle.com on Facebook." style="margin-top: 8px;display: block;"><a href="https://www.facebook.com/tinamichellespage" target="_blank" class="icon-facebook"></a></div>
                 <div class="hint--bounce hint--rounded hint--left" data-hint="Follow Tina-Michelle on Twitter (@rhythmnmovement)." style="margin-top: 8px;display: block;"><a href="https://twitter.com/rhythmnmovement" target="_blank" class="icon-twitter"></a></div>
                 <div class="hint--bounce hint--rounded hint--left" data-hint="Follow Tina-Michelle on LinkedIn." style="margin-top: 8px;"><a href="http://www.linkedin.com/pub/tina-michelle-pittsley/32/731/487" target="_blank" class="icon-linkedin"></a></div>
